--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
 
 body{
     width: 100%;
+    background-color: #eaeaea;
 }
 
 header{
-    background-color: #2c3327;
+    background-color: #2f4538;
     height: 60px;
     padding: 6px 0px;
 }
@@ -26,77 +27,31 @@ h1{
     font-weight: bold 800;
 }
 
-.secaoimagens{
-    display: flex;
-    width: 90%;
+main{
     margin: 5%;
-    padding: 0;
 }
 
-.imagens{
-    margin: 1%;
-    padding: 0;
-}
-
-.imagens img{
-    display: inline;
-    width: 48%;
-    margin: 0px;
-    padding: 0px;
-}
-
-.botao{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content:space-around;
+fieldset{
     background-color: white;
-    padding: 5px;
-    border-top: 1px solid black;
-}
-
-.botao img{
-    height: 50px;
-    padding: 5px;
-}
-
-.botao a{
-    text-align:end;
-    text-decoration: none;
-    color: black;
-    font-size: 12px;
-    padding: 5px;
-}
-
-.btn{
-    border-bottom: 3px solid black;
-    display: flex;
-    align-items: center;
-}
-
-.secaoprimeiroproduto{
-    display: flex;
-    width: 90%;
-    margin: 5%;
-    padding: 0;
-}
-
-.borda{
-    border: 1px solid black;
-    border-radius: 10px;
     width: 100%;
+    border: 1px solid black;
+    border-radius: 25px;
 }
 
-.produto{
+/* AMOSTRA */
+
+.field-amostra{
+    background-color: white;
     height: 200px;
     display: flex;
 }
 
-.produto img{
+.amostra_img{
     height: 200px;
     padding: 10px;
+}
+.descricao{
+    padding: 10px 10px 10px 0;
 }
 
 h2{
@@ -104,57 +59,19 @@ h2{
     text-align: start;
     letter-spacing: 1px;
     font-size: 1.2em;
-    padding: 15px 0px;
     font-weight: bold 800;
 }
 
-p{
-    color: black;
-    text-align: start;
-    font-size: 1em;
-    padding: 5px 0px;
-}
-
-.verde{
+.preco{
     color: rgb(0, 189, 0);
     text-decoration: underline;
     font-weight: bold;
+    padding: 10px 0px;
 }
 
 .menor{
     font-size: 0.85em ;
+    padding: 7px 0px;
 }
 
-fieldset{
-    margin: 10% 5%;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-fieldset p{
-    padding: 10px;
-    color: black;
-    text-align: start;
-    font-size: 1em;
-}
-
-legend{
-    text-align: center;
-}
-
-.container{
-    display: flex;
-    overflow-x: scroll;
-    width: 90%;
-    height: 220px;
-    margin: 50% 5%;
-    scroll-snap-type: x mandatory;
-    border-radius: 10px;
-    border: 1px solid black;
-}
-
-.item img{
-    height: 200px;
-    width: 200px;
-    margin: 7px 2px;
-}
+/* AMOSTRA */
