--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ h2{
     background-color: white;
     box-shadow:  12px 12px 24px #b3b3b3,
     -12px -12px 24px #ffffff;
-    padding: 15px 20px;
+    padding: 15px 15px;
     height: 100%;
 }
 
@@ -179,7 +179,29 @@ h2{
     font-size: 1.2em;
     padding: 5px 0;
     font-weight: lighter;
+    
 }
+
+/* DESCRICAO */
+
+/* ----------------------------------- */
+
+/* MEDIDA */
+
+.field-medida{
+    background-color: white;
+    width: 100%;
+    box-shadow:  12px 12px 24px #b3b3b3,
+    -12px -12px 24px #ffffff;
+}
+
+.medida{
+    width: 100%;
+    padding: 10px;
+}
+
+
+
 
 
 
