--- a/style.css
+++ b/style.css
@@ -46,11 +46,13 @@ h2{
 
 .texto_valor{
     font-size: 1.2em;
-    padding: 2px 20px;  
+    padding: 2px 20px; 
+    font-weight: bold;
 }
 
 .verde{
     color: #00bd00;
+    font-weight: bold;
 }
 
 .texto_menor{
