--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap');
 
 *{
     margin: 0;
@@ -14,7 +14,8 @@ body{
 }
 
 header{
-    background-color: #2f4538;
+    background-image: url(/img/fundo.jpg);
+    background-size:cover;
     height: 70px;
     padding: 10px 0px;
 }
@@ -28,31 +29,32 @@ main{
 
 h1{
     color: white;
+    text-shadow: 5px 5px 10px rgb(0, 0, 0);
     text-align: center;
-    letter-spacing: 7px;
-    font-size: 1.8em;
+    letter-spacing: 5px;
+    font-size: 2em;
     padding: 5px;
-    font-weight: bold 800;
+    font-weight: 900;
 }
 
 h2{
     color: black;
     text-align: start;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     font-size: 1.4em;
     padding: 7.5px 20px;
-    font-weight: bold 800; 
+    font-weight: 600; 
 }
 
 .texto_valor{
     font-size: 1.2em;
     padding: 2px 20px; 
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .verde{
     color: #00bd00;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .texto_menor{
@@ -112,7 +114,7 @@ h2{
 }
 
 .c_d p{
-    padding: 5px 0;
+    padding: 5px 0px;
     font-size: 0.85em ;
     text-transform:inherit;
 }
@@ -120,7 +122,7 @@ h2{
 .c_d h4{
     font-size: 1.4em;
     padding: 5px 0px 10px 0px;
-    font-weight: bold;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -159,8 +161,15 @@ h2{
 footer{
     text-align: center;
     color: white;
-    background-color: #2f4538;
+    font-weight: 600; 
+    text-shadow: 5px 5px 10px rgb(0, 0, 0);
+    background-image: url(/img/fundo.jpg);
+    background-size:cover;
     padding: 20px 5px 70px 5px;
+}
+
+footer h4{
+    font-size: 1.2em;
 }
 
 
