--- a/style.css
+++ b/style.css
@@ -1,238 +1,213 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
     box-sizing: border-box;
+    /* border: 1px solid orangered; */
 }
 
 body{
     width: 100%;
-    background-color: #fefefe;
+    background-color: #f5f5f5;
 }
 
 header{
+    background-image: url(/img/fundo.jpg);
+    background-size:cover;
     background-color: #2f4538;
-    height: 60px;
-    padding: 6px 0px;
-}
-
-h1{
-    color: white;
-    text-align: center;
-    letter-spacing: 7px;
-    font-size: 1.8em;
-    padding: 5px;
-    font-weight: bold 800;
+    height: 70px;
+    padding: 10px 0px;
 }
 
 main{
-    margin: 0% 5% 5% 5%;
+    margin:7% 3%;
+    background-color: #f5f5f5;
 }
 
-fieldset{
-    background-color: white;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 25px;
-}
+            /* T E X T O */
 
-.separador{
-    color: black;
+h1{
+    color: white;
+    text-shadow: 5px 5px 10px rgb(0, 0, 0);
     text-align: center;
-    letter-spacing: 2px;
-    font-size: 1.8em;
+    letter-spacing: 5px;
+    font-size: 2em;
     padding: 5px;
-    font-weight: bold 800;
-    margin: 10% 0% 2% 0%;
-}
-
-/* ----------------------------------- */
-
-/* AMOSTRA */
-
-.field-amostra{
-    background-color: white;
-    height: 240px;
-    display: flex;
-    box-shadow:  12px 12px 24px #b3b3b3,
-    -12px -12px 24px #ffffff;
-}
-
-.amostra_img{
-    height: 230px;
-    padding: 15px 10px;
-}
-
-.descricao{
-    padding: 10px 10px 10px 0;
+    font-weight: 900;
 }
 
 h2{
     color: black;
     text-align: start;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     font-size: 1.4em;
-    font-weight: bold 800;
+    padding: 7.5px 20px;
+    font-weight: 600; 
 }
 
-.preco{
-    color: rgb(0, 0, 0);
+.texto_valor{
     font-size: 1.2em;
-    font-weight: bold;
-    padding: 5px 0px 2px 0px;
+    padding: 2px 20px; 
+    font-weight: 600;
 }
 
-.preco2{
-    color: rgb(0, 189, 0);
-    font-size: 1.0em;
-    font-weight: bold;
-    padding: 0px 0px 5px 0px;
+.verde{
+    color: #00bd00;
+    font-weight: 600;
 }
 
-.menor{
+.texto_menor{
     font-size: 0.85em ;
-    padding: 3px 0px;
+    padding: 2px 20px;
 }
 
-/* AMOSTRA */
 
-/* ----------------------------------- */
+            /* C A R D S */
 
-/* BARRA INFERIOR */
 
-.botao{
-    position: fixed;
-    bottom: 0;
+.card{
+    border-radius: 10px;
     width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content:space-around;
     background-color: white;
-    padding: 5px;
+    box-shadow:  12px 12px 24px #b3b3b3,
+    -12px -12px 24px #ffffff;
+    margin: 10% 0%;
+}
+
+
+            /* P R O D U T O */
+
+
+.c_1{
+    height: 400px;
+}
+
+.descricao_produto{
     border-top: 1px solid black;
 }
 
-.botao img{
-    height: 40px;
-    padding: 0 5px 0 0;
-}
 
-.botao a{
-    text-align:end;
-    text-decoration: none;
-    color: black;
-    font-size: 12px;
-    padding: 5px;
-}
+            /* I M A G E N S */
 
-.btn{
-    border-bottom: 3px solid black;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-}
-
-/* BARRA INFERIOR */
-
-/* ----------------------------------- */
-
-/* IMAGENS */
 
 .container{
     display: flex;
     overflow-x: scroll;
     width: 100%;
-    height: 220px;
+    height: 250px;
     scroll-snap-type: x mandatory;
-    box-shadow:  12px 12px 24px #b3b3b3,
-    -12px -12px 24px #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 25px;
 }
-
 
 .item img{
-    height: 200px;
-    width: 200px;
-    margin: 7px 2px;
+    height: 230px;
+    width: 230px;
+    margin: 10px 0px 6px 0px;
 }
 
-.separador-img{
-    color: black;
-    text-align: center;
-    letter-spacing: 2px;
-    padding: 5px;
-    font-weight: bold 800;
-    margin: 10% 0% 0% 0%;
+
+            /* D E S C R I C A O */
+
+
+.c_d{
+    padding: 15px;
 }
 
-.separador-img h3{
-font-size: 1.8em;
-}
-
-.lado{
-    font-size: 0.5;
-    color: #b3b3b3;
-    text-transform:inherit ;
-    text-align: center;
-}
-
-/* IMAGENS */
-
-/* ----------------------------------- */
-
-/* DESCRICAO */
-
-.field-descricao{    
-    background-color: white;
-    box-shadow:  12px 12px 24px #b3b3b3,
-    -12px -12px 24px #ffffff;
-    padding: 15px 15px;
-    height: 100%;
-}
-
-.field-descricao p{
-    padding: 5px 0;
+.c_d p{
+    padding: 5px 0px;
     font-size: 0.85em ;
+    text-transform:inherit;
 }
 
-.field-descricao h4{
-    font-size: 1.2em;
-    padding: 5px 0;
-    font-weight: bold;
+.c_d h4{
+    font-size: 1.4em;
+    padding: 5px 0px 10px 0px;
+    font-weight: 600;
     text-align: center;
 }
 
-/* DESCRICAO */
 
-/* ----------------------------------- */
+            /* M E D I D A S */
 
-/* MEDIDA */
 
-.field-medida{
+.medida_img{
+    width: 100%;
+}
+
+.c2{
     background-color: white;
     width: 100%;
     padding: 10px;
-    box-shadow:  12px 12px 24px #b3b3b3,
-    -12px -12px 24px #ffffff;
 }
 
-.medida{
+
+            /* E S T A M P A */
+
+
+.estampa_img{
     width: 100%;
 }
 
-/* FOOTER */
+.c3{
+    background-color: white;
+    width: 100%;
+    padding: 10px;
+}
+
+
+            /* F O O T E R */
+
 
 footer{
     text-align: center;
     color: white;
+    font-weight: 600; 
+    text-shadow: 5px 5px 10px rgb(0, 0, 0);
+    background-image: url(/img/fundo.jpg);
+    background-size:cover;
     background-color: #2f4538;
     padding: 20px 5px 70px 5px;
 }
 
+footer h4{
+    font-size: 1.2em;
+}
 
 
+            /* B O T A O */
 
+.botao{
+    display: flex;
+    position: fixed;
+    bottom: 10px;
+    left: 60px;
+    right: 60px;
+    height: 50px;
+}
 
+button {
+    cursor: pointer;
+    font-size: 1.6em;
+    text-align: center;
+    color: white;
+    background-color: #128C7E;
+    border-radius: 50px;
+    border: 5px solid #075E54;
+    width: 100%; 
+    height: 100%;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2px;
+    font-weight: bold ; 
+    margin-bottom:5px ;
+}
+
+a img{
+    height: 30px;
+    margin-bottom: -5px;
+    margin-right: 15px;
+}
