--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h2{
 .container{
     display: flex;
     overflow-x: scroll;
-    width: 100%;
+    width: 100;
     height: 250px;
     scroll-snap-type: x mandatory;
 }
@@ -191,9 +191,14 @@ button {
     font-size: 1.6em;
     text-align: center;
     color: white;
-    background-color: #128C7E;
-    border-radius: 50px;
-    border: 5px solid #075E54;
+    background: rgba(18, 140, 126, 0.75);
+  box-shadow: 0 8px 16px 0 #13131378;
+
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(10px);
+
+  border: 2px solid rgb(7, 94, 84, 0.75);
+  border-radius: 18px;
     width: 100%; 
     height: 100%;
 }
